--- a/src/content/posts/articles/mechi-i-koldovstvo.mdx
+++ b/src/content/posts/articles/mechi-i-koldovstvo.mdx
@@ -127,7 +127,7 @@ tags:
 - оказание первой медицинской помощи;
 - полноценный врачебный уход.
 
-ВОССТАНОВЛЕНИЕ ХИТОВ ЕСТЕСТВЕННЫМ ОБРАЗОМ
+#### Восстановление хитов естественным образом
 
 | ОТДЫХ                            | ХИТЫ                                              | КОСТИ ХИТОВ                              |
 | -------------------------------- | ------------------------------------------------- | ---------------------------------------- |
