--- a/src/content/posts/translations/baldurs-gate-books.mdx
+++ b/src/content/posts/translations/baldurs-gate-books.mdx
@@ -769,25 +769,25 @@ tags:
 
 <Verse>
 
-«Я стою в комнате, что показывает путь,
-и должен выйти отсюда.
-Я бегу к восходящему солнцу,
-чтоб найти рядом каменную колонну».
+«Я стою в комнате, что показывает путь,  
+и должен выйти отсюда.  
+Я бегу к восходящему солнцу,  
+чтоб найти рядом каменную колонну».  
 
-«Я продолжаю, откуда начал,
-и с демоном говорю.
-Он велит путь на юг продолжать,
-бежать и слабым не быть».
+«Я продолжаю, откуда начал,  
+и с демоном говорю.  
+Он велит путь на юг продолжать,  
+бежать и слабым не быть».  
 
-«К югу, пока не найду обелиск,
-на нём руны со всех сторон.
-Заходящее солнце приближается ко мне,
+«К югу, пока не найду обелиск,  
+на нём руны со всех сторон.  
+Заходящее солнце приближается ко мне,  
 затем я в его огненных красных объятьях».
 
-«Оттуда бегу на самый холодный север,
-и ложусь возле дерева.
-Но даже там меня север зовёт,
-ведь на севере я свободен».
+«Оттуда бегу на самый холодный север,  
+и ложусь возле дерева.  
+Но даже там меня север зовёт,  
+ведь на севере я свободен».  
 
 </Verse>
 
@@ -799,7 +799,7 @@ tags:
 
 Кроме этого, сэру Калторину крайне досаждало «предательство» Рыцарей Дозора в его тяжёлом положении. Ничего более подробного об этом не говорится, что особенно странно, если учесть, что дневнику примерно полвека, а может, и больше.
 
-## Дневник проекта «Умарская ведьма»
+## Дневник проекта Умарская ведьма
 
 Это, предположительно, дневник ученицы мага, в котором записана история её экспедиции в Холмы Умар вместе с двумя другими учениками в поисках свидетельств о сказочной ведьме. В эту историю трудно поверить, но текст, похоже, действительно отражает ужас путешественников, заблудившихся и преследуемых по ночам невидимым хищником. Записи сделаны наспех, дрожащей женской рукой, и на последней странице едва можно разобрать следующее:
 
