--- a/src/content/posts/core-d20/multiclassing.mdx
+++ b/src/content/posts/core-d20/multiclassing.mdx
@@ -18,7 +18,7 @@ tags:
 
 Например, воин 4/варвар 3 — получит дополнительную атаку на 7ом. На 8ом — воин 5/варвар 3 — ничего не получит, а на 10ом воин5/варвар 5 получит еще один стиль.
 
-## Проведение энергии (channel divinity)
+## Проведение энергии [Channel divinity]
 
 Опциональное правило, заменяет собой правило из Книги Игрока
 
