--- a/src/content/posts/core-d20/design-diary-equipment-weapons-1.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-weapons-1.mdx
@@ -1,14 +1,14 @@
 ---
-title: [Core d20 RPG] Мысли вслух. Дневник разработчика. Снаряжение – Оружие, часть 1
-description: Про оружие в Core d20 RPG и особенности его описания
-date: 2023-05-17
+title: '[Core d20 RPG] Мысли вслух. Дневник разработчика. Снаряжение – Оружие, часть 1'
+description: 'Про оружие в Core d20 RPG и особенности его описания'
+date: 2023-05-25
 tags:
-  - Core d20 RPG
-  - Оружие
-  - Снаряжение
-  - Сражение
-  - Мысли вслух
-  - Дневник разработчика
+  - 'Core d20 RPG'
+  - 'Оружие'
+  - 'Снаряжение'
+  - 'Сражение'
+  - 'Мысли вслух'
+  - 'Дневник разработчика'
 ---
 
 
