--- a/src/content/posts/core-d20/design-diary-equipment-weapons-1.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-weapons-1.mdx
@@ -99,4 +99,10 @@ tags:
 
 Дополнительно, в правилах должно быть описано разделение оружия на группы и опционально могут быть созданы специфичные для каждого оружия активно используемые приемы - по аналогии с боевыми приемами основанными на стиле, базовыми боевыми приемами.
 
+Дополнительным подразделом в главе Оружие должно стать описание вариаций оружия:
+- по качеству изготовления: мастерски изготовленное, которое может давать +1 к урону (за 300 зм), +1 к попаданию (за 600 зм) или +1 к урону и попаданию (за 1200 зм)
+- особенностей изготовителей - дварфийское, эльфийское
+- используемым материалам - адамантин, мифрал, холодное железо, посеребрение
+
+
 
