--- a/src/content/posts/core-d20/design-diary-equipment-weapons-1.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-weapons-1.mdx
@@ -12,7 +12,7 @@ tags:
 ---
 
 
-Ранее я уже затрагивал темы связанные со снаряжением – см. Мысли вслух. Дневник разработчика. Доспехи, Мысли вслух. Дневник разработчика. Снаряжение авантюриста, часть 1 и Мысли вслух. Дневник разработчика. Снаряжение авантюриста, часть 2, Расширенные правила по щитам.
+Ранее я уже затрагивал темы связанные со снаряжением – см. [Мысли вслух. Дневник разработчика. Доспехи](https://cyborgsandmages.com/posts/core-d20/design-diary-equipment-armor-1), [Мысли вслух. Дневник разработчика. Снаряжение авантюриста, часть 1](https://cyborgsandmages.com/posts/core-d20/design-diary-equipment-adventurers-gear-1) и [Мысли вслух. Дневник разработчика. Снаряжение авантюриста, часть 2](https://cyborgsandmages.com/posts/core-d20/design-diary-equipment-adventurers-gear-2), [Расширенные правила по щитам](https://cyborgsandmages.com/posts/core-d20/enhanced-shields).
 
 Теперь пришло время поговорить про оружие.
 
