--- a/src/content/posts/core-d20/design-diary-equipment-adventurers-gear-1.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-adventurers-gear-1.mdx
@@ -6,6 +6,8 @@ tags:
   - Core d20 RPG
   - Мысли вслух
   - Снаряжение
+  - Снаряжение авантюриста
+  - Дневник разработчика
 ---
 
 Рассматривая часть главы Снаряжение, которая посвящена детальному обзору обмундированию и предметам, используемыми авантюристами, а в особенности учитывая ретроспективный опыт старых редакций и опыт сотен игр, легко заметить следующее:
