--- a/src/content/posts/core-d20/design-diary-equipment-armor-1.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-armor-1.mdx
@@ -6,6 +6,8 @@ tags:
   - Core d20 RPG
   - Мысли вслух
   - Снаряжение
+  - Доспехи
+  - Дневник разработчика
 ---
 
 Раздел правил посвященный доспехам в главе снаряжения пятой редакции не сказать, чтобы сильно баловал игроков содержимым. Изначально игрокам предлагается три вида доспехов – легкие, средние и тяжелые, один вид щита, немного дополнительных правил по одеванию / сниманию доспехов и самое общее описание доспехов.
