--- a/src/content/posts/core-d20/enhanced-shields.mdx
+++ b/src/content/posts/core-d20/enhanced-shields.mdx
@@ -6,6 +6,8 @@ tags:
   - Core d20 RPG
   - Снаряжение
   - Щиты
+  - Дневник разработчика
+  - Мысли вслух
 ---
 
 Эта статья посвящена правилам по щитам в рамках нашего проекта Core d20 RPG.
