--- a/src/content/posts/core-d20/design-diary-about-system.mdx
+++ b/src/content/posts/core-d20/design-diary-about-system.mdx
@@ -49,6 +49,10 @@ tags:
 
 Созданная как системаа без требуемых волшебных предметов для развития персонажей пятая редакция из за дизайна неволшебных предметов и существ - вообще оставляет персонажей без материальных наград, которые бы имели смысл.
 
+В частности, механики использования кислоты, алхимического огня и святой воды - делают их весьма бесполезными и дорогими - в особенности по сравнению с бесконечными заговорами.
+
+(У меня вообще появляется мысль о том, что доминация заклинателей в пятой редакции никуда не исчезла - просто приняла другие формы).
+
 Что уж тут говорить о естественном языке изложения правил, который сообщество не оценило и требует жестко формализованных правил?
 
 Во второй части заметки я буду говорить о том, как я это меняю в нашем варианте правил под рабочим названием - Core d20 RPG
