--- a/src/content/posts/articles/e5e-basic-alchemical-items.mdx
+++ b/src/content/posts/articles/e5e-basic-alchemical-items.mdx
@@ -139,8 +139,91 @@ To the average folk, alchemy is an excellent art that produces a wide array of u
 **Rarity.** Alchemical goods are given a Rarity rating, just like magic items are. Generally speaking, those with a higher rarity are harder to find. All alchemists begin their craft knowing all Common, four Uncommon, and a single Rare recipe, though it is only a matter of time before an alchemist collects many more recipes.
 
  
-
-<table><tbody><tr><td width="108"><strong>Item Name</strong></td><td width="108"><strong>Cost, gp</strong></td><td width="108"><strong>Weight, lb</strong></td></tr><tr><td width="108">Acid</td><td width="108">10</td><td width="108">1</td></tr><tr><td width="108">Acid Neutralizer</td><td width="108">50</td><td width="108">1</td></tr><tr><td width="108">Alchemical compass</td><td width="108">450</td><td width="108">0</td></tr><tr><td width="108">Alchemical Dye</td><td width="108">5</td><td width="108">0</td></tr><tr><td width="108">Alchemical Glue</td><td width="108">10</td><td width="108">0</td></tr><tr><td width="108">Alchemical Ink, Black</td><td width="108">8</td><td width="108">0</td></tr><tr><td width="108">Alchemical Ink, Colors</td><td width="108">15</td><td width="108">0</td></tr><tr><td width="108">Alchemical Ink, Metallics</td><td width="108">25</td><td width="108">0</td></tr><tr><td width="108">Alchemical Salt</td><td width="108">15</td><td width="108">0</td></tr><tr><td width="108">Alchemical Silver Treatment</td><td width="108">25</td><td width="108">—</td></tr><tr><td width="108">Alchemist's Doom</td><td width="108">50</td><td width="108">1</td></tr><tr><td width="108">Alchemist's fire</td><td width="108">20</td><td width="108">1</td></tr><tr><td width="108">Anti-Rust Treatment</td><td width="108">20</td><td width="108">0</td></tr><tr><td width="108">Antitoxin</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Aqua Salutem</td><td width="108">60</td><td width="108">0</td></tr><tr><td width="108">Artwine</td><td width="108">10</td><td width="108">0</td></tr><tr><td width="108">Astutive Elixir</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Bladefire</td><td width="108">20</td><td width="108">1</td></tr><tr><td width="108">Blastpatch</td><td width="108">3</td><td width="108">1</td></tr><tr><td width="108">Blazebane</td><td width="108">20</td><td width="108">0</td></tr><tr><td width="108">Campstone</td><td width="108">1</td><td width="108">0</td></tr><tr><td width="108">Catstink</td><td width="108">50</td><td width="108">1</td></tr><tr><td width="108">Cleaning Agents</td><td width="108">1</td><td width="108">0</td></tr><tr><td width="108">Cleansewater</td><td width="108">5</td><td width="108">0</td></tr><tr><td width="108">Clearbreath</td><td width="108">50</td><td width="108">—</td></tr><tr><td width="108">Clearwater Solution</td><td width="108">4</td><td width="108">0</td></tr><tr><td width="108">Cognitive Elixir</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Darkeye Oil</td><td width="108">15</td><td width="108">0</td></tr><tr><td width="108">Darkvision powder</td><td width="108">10</td><td width="108">1 oz.</td></tr><tr><td width="108">Dazzler</td><td width="108">20</td><td width="108">0</td></tr><tr><td width="108">Drunkard’s Head Remedy</td><td width="108"></td><td width="108"></td></tr><tr><td width="108">Dwarfblind</td><td width="108">50</td><td width="108">1 lb.</td></tr><tr><td width="108">Emetic Elixir</td><td width="108">2</td><td width="108">0</td></tr><tr><td width="108">Everburning torch</td><td width="108">110</td><td width="108">1</td></tr><tr><td width="108">Eye cusps</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Faerie Burst</td><td width="108">40</td><td width="108">0</td></tr><tr><td width="108">Fareye Oil</td><td width="108">25</td><td width="108">0</td></tr><tr><td width="108">Fascinative Elixir</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Fire Ward Gel</td><td width="108">150</td><td width="108">1</td></tr><tr><td width="108">Firecracker Ammunition</td><td width="108">4</td><td width="108">0</td></tr><tr><td width="108">Flash Pellet</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Flash Rocket</td><td width="108">40</td><td width="108">1</td></tr><tr><td width="108">Froststone</td><td width="108">25</td><td width="108">0</td></tr><tr><td width="108">Frostvial</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Ghostoil</td><td width="108">50</td><td width="108">1 lb.</td></tr><tr><td width="108">Glowpowder</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Gluebomb</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Gravebane</td><td width="108">50</td><td width="108">1 lb.</td></tr><tr><td width="108">Gruel Pellet</td><td width="108">20</td><td width="108">0</td></tr><tr><td width="108">Hawk’s Ointment</td><td width="108">20</td><td width="108">0</td></tr><tr><td width="108">Hawk’s Ointment</td><td width="108">20</td><td width="108">0</td></tr><tr><td width="108">Instant Rope</td><td width="108">25</td><td width="108">1 lb.</td></tr><tr><td width="108">Invigorative Elixir</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Keenear Powder</td><td width="108">20</td><td width="108">0</td></tr><tr><td width="108">Mailrot</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Merstone</td><td width="108">10</td><td width="108">0</td></tr><tr><td width="108">Pain Relief Elixir</td><td width="108">5</td><td width="108">0</td></tr><tr><td width="108">Phantom Ink</td><td width="108">30</td><td width="108">0</td></tr><tr><td width="108">Reflexitive Elixir</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Salamander Salve</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Silver Treatment</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Skunk Cloud</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Sleep Aid Elixir</td><td width="108">1</td><td width="108">0</td></tr><tr><td width="108">Smokestick, Ratsbane</td><td width="108">10</td><td width="108">0</td></tr><tr><td width="108">Smokestick, Witchweed</td><td width="108">40</td><td width="108">0</td></tr><tr><td width="108">Softfoot Treatment</td><td width="108">12</td><td width="108">0</td></tr><tr><td width="108">Spark Gravel</td><td width="108">20</td><td width="108">0</td></tr><tr><td width="108">Sparkstone</td><td width="108">8</td><td width="108">0</td></tr><tr><td width="108">Spell Ink</td><td width="108">15</td><td width="108">0</td></tr><tr><td width="108">Stinkbomb</td><td width="108">25</td><td width="108">0</td></tr><tr><td width="108">Stonebreaker Acid</td><td width="108">30</td><td width="108">0</td></tr><tr><td width="108">Storm Salve</td><td width="108">0</td><td width="108">0</td></tr><tr><td width="108">Sunrod</td><td width="108">2</td><td width="108">0</td></tr><tr><td width="108">Suregrip</td><td width="108">20</td><td width="108">0</td></tr><tr><td width="108">Tangleburn Bag</td><td width="108">75</td><td width="108">5</td></tr><tr><td width="108">Tanglefoot bag</td><td width="108">50</td><td width="108">0</td></tr><tr><td width="108">Tangler grenade</td><td width="108">100</td><td width="108">1</td></tr><tr><td width="108">Thunderstone</td><td width="108">10</td><td width="108">—</td></tr><tr><td width="108">Tindertwig</td><td width="108">1</td><td width="108">0</td></tr><tr><td width="108">Torch, Alchemical</td><td width="108">0</td><td width="108">1</td></tr><tr><td width="108">Torch, Signal</td><td width="108">1</td><td width="108">1</td></tr><tr><td width="108">Verminbane</td><td width="108">20</td><td width="108">1</td></tr><tr><td width="108">Vicious Bleeder</td><td width="108">50</td><td width="108">11</td></tr></tbody></table>
+| Item Name                   | Cost, gp | Weight, lb |
+|-----------------------------|----------|------------|
+| Acid                        | 10       | 1          |
+| Acid Neutralizer            | 50       | 1          |
+| Alchemical compass          | 450      | 0          |
+| Alchemical Dye              | 5        | 0          |
+| Alchemical Glue             | 10       | 0          |
+| Alchemical Ink, Black       | 8        | 0          |
+| Alchemical Ink, Colors      | 15       | 0          |
+| Alchemical Ink, Metallics   | 25       | 0          |
+| Alchemical Salt             | 15       | 0          |
+| Alchemical Silver Treatment | 25       | —          |
+| Alchemist's Doom            | 50       | 1          |
+| Alchemist's fire            | 20       | 1          |
+| Anti-Rust Treatment         | 20       | 0          |
+| Antitoxin                   | 50       | 0          |
+| Aqua Salutem                | 60       | 0          |
+| Artwine                     | 10       | 0          |
+| Astutive Elixir             | 50       | 0          |
+| Bladefire                   | 20       | 1          |
+| Blastpatch                  | 3        | 1          |
+| Blazebane                   | 20       | 0          |
+| Campstone                   | 1        | 0          |
+| Catstink                    | 50       | 1          |
+| Cleaning Agents             | 1        | 0          |
+| Cleansewater                | 5        | 0          |
+| Clearbreath                 | 50       | —          |
+| Clearwater Solution         | 4        | 0          |
+| Cognitive Elixir            | 50       | 0          |
+| Darkeye Oil                 | 15       | 0          |
+| Darkvision powder           | 10       | 1 oz.      |
+| Dazzler                     | 20       | 0          |
+| Drunkard’s Head Remedy      |          |            |
+| Dwarfblind                  | 50       | 1 lb.      |
+| Emetic Elixir               | 2        | 0          |
+| Everburning torch           | 110      | 1          |
+| Eye cusps                   | 50       | 0          |
+| Faerie Burst                | 40       | 0          |
+| Fareye Oil                  | 25       | 0          |
+| Fascinative Elixir          | 50       | 0          |
+| Fire Ward Gel               | 150      | 1          |
+| Firecracker Ammunition      | 4        | 0          |
+| Flash Pellet                | 50       | 0          |
+| Flash Rocket                | 40       | 1          |
+| Froststone                  | 25       | 0          |
+| Frostvial                   | 50       | 0          |
+| Ghostoil                    | 50       | 1 lb.      |
+| Glowpowder                  | 50       | 0          |
+| Gluebomb                    | 50       | 0          |
+| Gravebane                   | 50       | 1 lb.      |
+| Gruel Pellet                | 20       | 0          |
+| Hawk’s Ointment             | 20       | 0          |
+| Hawk’s Ointment             | 20       | 0          |
+| Instant Rope                | 25       | 1 lb.      |
+| Invigorative Elixir         | 50       | 0          |
+| Keenear Powder              | 20       | 0          |
+| Mailrot                     | 50       | 0          |
+| Merstone                    | 10       | 0          |
+| Pain Relief Elixir          | 5        | 0          |
+| Phantom Ink                 | 30       | 0          |
+| Reflexitive Elixir          | 50       | 0          |
+| Salamander Salve            | 50       | 0          |
+| Silver Treatment            | 50       | 0          |
+| Skunk Cloud                 | 50       | 0          |
+| Sleep Aid Elixir            | 1        | 0          |
+| Smokestick, Ratsbane        | 10       | 0          |
+| Smokestick, Witchweed       | 40       | 0          |
+| Softfoot Treatment          | 12       | 0          |
+| Spark Gravel                | 20       | 0          |
+| Sparkstone                  | 8        | 0          |
+| Spell Ink                   | 15       | 0          |
+| Stinkbomb                   | 25       | 0          |
+| Stonebreaker Acid           | 30       | 0          |
+| Storm Salve                 | 0        | 0          |
+| Sunrod                      | 2        | 0          |
+| Suregrip                    | 20       | 0          |
+| Tangleburn Bag              | 75       | 5          |
+| Tanglefoot bag              | 50       | 0          |
+| Tangler grenade             | 100      | 1          |
+| Thunderstone                | 10       | —          |
+| Tindertwig                  | 1        | 0          |
+| Torch, Alchemical           | 0        | 1          |
+| Torch, Signal               | 1        | 1          |
+| Verminbane                  | 20       | 1          |
+| Vicious Bleeder             | 50       | 11         |
 
  
 
