--- a/src/content/posts/articles/economic-model-5e-2.mdx
+++ b/src/content/posts/articles/economic-model-5e-2.mdx
@@ -16,7 +16,6 @@ tags:
   - "wealth"
 ---
 
-#dnd #5e #e5e #magicitems #spellcastingservices #magicitemcost #economics #economy #price #appraising #statistical #permanent #cost
 
 Прежде чем продолжить я хотел бы поблагодарить всех тех, кто поддерживает наш проект на [Патреоне](https://www.patreon.com/palikhov) или просто донатит на карточку, в частности:
 
@@ -71,7 +70,17 @@ tags:
 
 Очевидно, что даже при такой прогрессии стоимость заклинаний более высоких кругов будет все еще выше в виду их более ограниченного количества, поэтому можно применять **кубическую прогрессию** стоимости сотворения заклинаний (стоимость заклинания = базовая стоимость (20 зм) \* круг заклинания ^ 3 зм).
 
-<table style="border-collapse: collapse;" border="0"><colgroup><col style="width: 64px;"> <col style="width: 86px;"> <col style="width: 64px;"> <col style="width: 75px;"></colgroup><tbody valign="top"><tr style="height: 17px;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;"><strong>Круг</strong></span></td><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;"><strong>Базовая стоимость заклинания, зм</strong></span></td><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;"><strong>Ритуал, зм</strong></span></td><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;"><strong>Стоимость свитка, зм</strong></span></td></tr><tr style="height: 17px;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;">1</span></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">20</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">10</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">30</span></p></td></tr><tr style="height: 17px; background: #cee4aa;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;">2</span></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">160</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">80</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">240</span></p></td></tr><tr style="height: 17px;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;">3</span></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">540</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">270</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">810</span></p></td></tr><tr style="height: 17px; background: #cee4aa;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;">4</span></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">1280</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">640</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">1920</span></p></td></tr><tr style="height: 17px;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;">5</span></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">2500</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">1250</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">3750</span></p></td></tr><tr style="height: 17px; background: #cee4aa;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;">6</span></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">4320</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">2160</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">6480</span></p></td></tr><tr style="height: 17px;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;">7</span></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">6860</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">3430</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">10290</span></p></td></tr><tr style="height: 17px; background: #cee4aa;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;">8</span></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">10240</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">5120</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">15360</span></p></td></tr><tr style="height: 17px;"><td style="padding-left: 7px; padding-right: 7px;"><span style="color: black; font-size: 10pt;">9</span></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">14580</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">7290</span></p></td><td style="padding-left: 7px; padding-right: 7px;"><p style="text-align: right;"><span style="color: black; font-size: 10pt;">21870</span></p></td></tr></tbody></table>
+| Круг | Базовая стоимость заклинания, зм | Ритуал, зм | Стоимость свитка, зм |
+|------|----------------------------------|------------|----------------------|
+| 1    | 20                               | 10         | 30                   |
+| 2    | 160                              | 80         | 240                  |
+| 3    | 540                              | 270        | 810                  |
+| 4    | 1280                             | 640        | 1920                 |
+| 5    | 2500                             | 1250       | 3750                 |
+| 6    | 4320                             | 2160       | 6480                 |
+| 7    | 6860                             | 3430       | 10290                |
+| 8    | 10240                            | 5120       | 15360                |
+| 9    | 14580                            | 7290       | 21870                |
 
 Сразу добавим **дополнительные условия:**
 
