--- a/src/content/posts/articles/e5e-basic-alchemical-items.mdx
+++ b/src/content/posts/articles/e5e-basic-alchemical-items.mdx
@@ -64,7 +64,13 @@ Components. Alchemist’s supplies include two glass beakers, a metal frame to h
 
 Alchemist’s Supplies
 
-<table><tbody><tr><td width="163"><strong>Activity</strong></td><td width="163"><strong>DC</strong></td></tr><tr><td width="163">Create a puff of thick smoke</td><td width="163">10</td></tr><tr><td width="163">Identify a poison</td><td width="163">10+2*rarity</td></tr><tr><td width="163">Identify a substance</td><td width="163">15+2*rarity</td></tr><tr><td width="163">Start a fire</td><td width="163">15</td></tr><tr><td width="163">Neutralize acid</td><td width="163">20</td></tr></tbody></table>
+| Activity                     | DC          |
+|------------------------------|-------------|
+| Create a puff of thick smoke | 10          |
+| Identify a poison            | 10+2*rarity |
+| Identify a substance         | 15+2*rarity |
+| Start a fire                 | 15          |
+| Neutralize acid              | 20          |
 
 **Alchemy Lab.** Cost: 500gp (3 slots), +100 gp per additional slot. An alchemy lab is a much larger workspace than a simple set of supplies. Where alchemist’s supplies can only be used to work on a single project at a time, the purpose of a lab is to allow multiple processes to work at the same time. Each slot allows an alchemist to tend to a single project, performing the standard 5gp worth of work towards the completion of that alchemical item for each slot. An alchemist can tend to a number of such slots equal to 1 + their proficiency bonus. Multiple slots can also be dedicated to a single project, devoting more resources to the project in question. For each slot dedicated to a given item, 5gp of work is done per day towards that item being completed. Thus, if an alchemist devotes three slots toward finishing a potion of climbing, they accomplish 15gp per day of crafting toward that end.
 
@@ -102,13 +108,17 @@ Acid and ammonia are used to test the general pH of materials.
 
 **Alchemical Refinement:** Alchemical procedures are reliable and steady for the trained alchemist. Generally speaking, an alchemist almost never needs to make an actual Tool Proficiency check to successfully create items - it is enough to permit the allotted time to pass and spend the coin on the materials. Sometimes, though, an alchemist needs to hurry along a procedure, necessitating alchemical refinement.
 
-<table><tbody><tr><td width="373"></td></tr><tr><td></td><td></td></tr></tbody></table>
-
 By making an Alchemist’s Supplies check, the alchemist can speed the process along, multiplying each day invested towards accomplishing the final results of an alchemical recipe. The alchemist makes an Alchemist’s Supplies check, at the following DCs, based on the type of alchemical good being created. Each such check also incurs an additional cost in materials, which do not count toward the completion of the procedure.
 
 ## Containers
 
-<table><tbody><tr><td width="108"><strong>Container for alchemical goods</strong></td><td width="108"><strong>Cost, gp</strong></td><td width="108"><strong>Typical full weight, lb</strong></td></tr><tr><td width="108">Pot</td><td width="108"></td><td width="108"></td></tr><tr><td width="108">Jug</td><td width="108"></td><td width="108"></td></tr><tr><td width="108">Flask</td><td width="108"></td><td width="108"></td></tr><tr><td width="108">Vial</td><td width="108"></td><td width="108"></td></tr><tr><td width="108">Bottle</td><td width="108"></td><td width="108"></td></tr></tbody></table>
+| Container for alchemical goods | Cost, gp | Typical full weight, lb |
+|--------------------------------|----------|-------------------------|
+| Pot                            |          |                         |
+| Jug                            |          |                         |
+| Flask                          |          |                         |
+| Vial                           |          |                         |
+| Bottle                         |
 
 ## Groups
 
