--- a/src/content/posts/articles/e5e-rogue-archetypes.mdx
+++ b/src/content/posts/articles/e5e-rogue-archetypes.mdx
@@ -3,10 +3,8 @@ title: "Плут | E5E"
 description: Избранные архетипы плута для E5E
 date: "2022-04-14"
 tags: 
-  - "5e"
-  - "e5e"
-  - "homebrew"
-  - "Плут"
+  - 'Плут'
+  - 'E5E'
 ---
 
 [E5E CLASSES REV 007 28052022.docx](https://1drv.ms/w/s!Atcrhwwo1lBA19hWtDTlK9IQjozOaA?e=ReepyW)
