--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -30,6 +30,40 @@ links:
 
 И понемногу стало приходить понимание, что этот сервер является чем-то большим, чем простая площадка для вождения игр.
 
+## Вождение
+
+Мастера с этого сообщества водили игры в рамках Лиги Авантюристов практически на каждом онлайн-конвенте, в т.ч.участвуя в подготовке этих самих приключений в Roll20 и созданни для них карт.
+
+Таким образом мы провели все эпические приключения 1-8 сезонов Лиги Авантюристов, а также кампании Оракул Войны в Эберроне.
+
+Некоторые наши мастера при этом также начали водить и на английском языке.
+
+Добрая традиция как можно больше участвовать в проведении эпических приключений онлайн сохраняется и до сих пор.
+
+## Создание контента для dmsguild.com
+
+Подготовка к вождению кампаний всегда была трудоемкой и собранные материалы публиковались на dmsguild.com
+
+В число этих материалов входило и Собрание предысторий для Лиги Авантюристов, которое потом администраторы убрали с публикации (а жаль - оно стало к тому моменту электрумным бестселлером) и также другие материалы - направленные в первую очередь на мастеров, многие из которых стали бестселлерами на dmsguild.com
+
+В какой то момент времени была предпринята попытка публикации русскоязычного приключения - Однажды на постоялом дворе. К сожалению, несмотря на множество положительных отзывов, коммерческого успеха эта авантюра не имела.
+
+## Участие в переводах материалов D&D
+
+Начиная с выхода Руководства Воло по чудовищам многие участники сообщества - Юра, Ира, Дима, Антон, Кирилл принимают активное участие в проектах переводов материалов D&D и приключений Лиги Авантюристов.
+
+Помимо этого была начата работа над бесплатным переводом SRD 5.1 на русский язык с целью предоставления сообществу полностью легальных, базовых правил пятой редакции, используя которые каждый мог бы создавать свои материалы и не зависеть от правообладателей и при этом не используя пиратский перевод, который содержит множество ошибок и неточностей.
+
+Опыт работы над переводом на русский язык был использован и при помощи в переводе SRD 5.1 на украинский язык.
+
+## Создание домашних правил и homebrew
+
+Закономерным итогом многолетнего вождения D&D 5e и хаков на основе ее движка стало написание собственных вариантных правил и дополнений, которые в целом также хорошо были восприняты англоязычным сообществом - Palant Guide to Combat, Herbs of Forgotten Realms в частности.
+
+После чего были начаты публикации и на drivethrurpg.com
+
+В данный момент основной гейм дизайнер - Антон занят проектом расширения и дополнения основных правил пятой редакции с целью создания русскоязычного варианта правил, который был бы доступен каждому игроку и мастеру и при этом создавал новые возможности для учасников (по сравнению с официальными правилами)
+
 <Aside>
 
 Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над переводом SRD 5.1 и готовим свои материалы, которые могут заменить D&D 5e после выхода One D&D - наш проект Core d20 RPG
