--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -6,10 +6,10 @@ description: Проекты и материалы, созданные Кибор
 ## Подборки ресурсов
 
 **RPG RESOURCES COMPENDIUM**
-https://1drv.ms/w/s!Atcrhwwo1lBA1-JYy7A4n58SAwonWQ?e=fywbzI
+[RPG Resources Compendium](https://1drv.ms/w/s!Atcrhwwo1lBA1-JYy7A4n58SAwonWQ?e=fywbzI)
 
 **Киборги и Чародеи - Ресурсы для мастеров**
-https://docs.google.com/document/d/1xhlWkdWvxc7a8Av0Z3pRM6knh8iDqLqe-UcmOnRcZXc/edit?usp=sharing
+[Ресурсы для Мастеров](https://docs.google.com/document/d/1xhlWkdWvxc7a8Av0Z3pRM6knh8iDqLqe-UcmOnRcZXc/edit?usp=sharing)
 
 **Киборги и Чародеи - Общие ресурсы**
 https://docs.google.com/document/d/1kTmUlLBEBorm8O4o6HnZEhUb3-_pazgNMUig6nkwr_w/edit?usp=sharing
@@ -17,6 +17,8 @@ https://docs.google.com/document/d/1kTmUlLBEBorm8O4o6HnZEhUb3-_pazgNMUig6nkwr_w/
 ## Core d20 RPG (Бывший E5E)
 
 Core d20 RPG - это проект по написанию набора правил совместимых с D&D 5e на основе SRD 5.1 и OGL материалов, который будет бесплатен для распространения.
+
+Подробнее - смотри в разделе [Core d20 RPG](https://cyborgsandmages.com/core-d20/1)
 
 ### Зачем мы это делаем?
 
@@ -40,28 +42,48 @@ Core d20 RPG - это проект по написанию набора прав
 
 Собрание предысторий, которые можно использовать в играх Лиги. Русская и английская версии.
 
+[Собрание предысторий Лиги Авантюристов - скачать]()
+
 ### Бестиарий Лиги
 
 Собрание уникальных статблоков из Лиги Авантюристов (незаконченное)
+
+[Бестиарий Лиги Авантюристов - скачать]()
 
 ## Материалы размещенные на dmsguild.com
 
 Все наши материалы размещенные в Гильдии Мастеров.
 
+[Waterdeep in tables]()
+
+
 ## Материалы размещенные на drivethrurpg.com
 
 Все наши материалы опубликованные на Drivethrurpg.com
+
+[Palant Notes about Combat, 1]()
+
+[Palant Notes about Combat, 2]()
 
 ## Прочие наши материалы и Проекты
 
 ### Руководство по Roll20
 
+[Старое руководство по Roll20]()
+
 ### Руководство по Foundry
+
+[Руководство по Foundry]()
 
 ### Бестиарии на critter.db
 
+[Бестиарий на critterdb]()
+
 ### Описание сеттингов на World Anvil
 
-Forgotten Realms
+[Not Forgotten Realms]()
+
+[Eberron]()
+
 
 ## Прочие наши ресурсы
