--- a/src/content/posts/articles/gg-monster-maker-beta.mdx
+++ b/src/content/posts/articles/gg-monster-maker-beta.mdx
@@ -22,7 +22,7 @@ tags:
 
 Перевод основан на [нашем переводе SRD](https://srd.dnd-5e.org/)
 
-[](/images/gg-monster-maker-beta.png)
+[1](/images/gg-monster-maker-beta.png)
 
 
 [Создатель чудовищ (бета)](https://monstermaker.cyborgsandmages.com/)
