--- a/src/content/posts/articles/gg-monster-maker-beta.mdx
+++ b/src/content/posts/articles/gg-monster-maker-beta.mdx
@@ -27,6 +27,14 @@ tags:
 
 [Создатель чудовищ (бета)](https://monstermaker.cyborgsandmages.com/)
 
+<aside>
+
+Уточнение 1. База SRD сушеств - не переведена.
+
+Уточнение 2. Случайно файл с переводом общих особенностей не попал в релиз, будет обновлен в ближайшее время
+
+</aside>
+
 И, кстати, если у вас есть предложения - тоже напишите нам. Ваше мнение для нас важно.
 
 
